# AWP

./: README.md
controlplane/: Cargo.toml  config.yaml
controlplane/ansible/: deploy_awp_controlplane.yml  deploy_database.yml  inventory
controlplane/src/: api.rs  main.rs
controlplane/src/api/: database.rs  ovn.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/api/: api.js
frontend/src/components/: AddSSHKeyForm.jsx  AddTenantForm.jsx  AddVpcForm.jsx  CreateVMForm.jsx  HypervisorList.jsx  ProgressBar.jsx  ProviderNetworkList.jsx  SSHKeyList.jsx  VMList.jsx  VpcTable.jsx
frontend/src/components/ui/: Button.jsx  Card.jsx  ErrorMessage.jsx  Select.jsx  Skeleton.jsx  Table.jsx
frontend/src/pages/: Dashboard.jsx
frontend/src/utils/: errorUtils.js
hypervisor/: Cargo.toml  config.yaml  hypervisor.rs
hypervisor/ansible/: deploy_awp_hypervisor.yml  inventory
hypervisor/src/: agent.rs  api.rs  main.rs
hypervisor/src/api/: libvirt.rs  ovs.rs
