[package]
name = "awp_controlplane"
version = "0.0.1"
authors = ["Andrea Veri <andrea.veri@gmail.com>"]
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "uuid", "ipnetwork"] }
serde_json = "1.0.140"
serde_yaml = "0.9"
serde = { version = "1.0.219", features = ["derive"]}
uuid = { version = "1.7", features = ["serde"] }
reqwest = "0.12.15"
chrono = "0.4.40"
rand = "0.9.0"
ssh-key = "0.6.7"
